--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -15,27 +15,49 @@
     </style>
 </head>
 <body>
-    <!-- Navbar de Bootstrap -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="{{ path('welcome') }}">Mi Sitio</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link" href="{{ path('welcome') }}">Inicio</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="{{ path('product_index') }}">Lista de Productos</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="{{ path('product_create') }}">Crear Producto</a>
-                </li>
-                <!-- Más elementos del menú aquí -->
-            </ul>
-        </div>
-    </nav>
+<!-- Navbar de Bootstrap -->
+<!-- Navbar de Bootstrap -->
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" href="{{ path('welcome') }}">Mi Sitio</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+            <li class="nav-item">
+                <a class="nav-link" href="{{ path('welcome') }}">Inicio</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="{{ path('product_index') }}">Lista de Productos</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="{{ path('product_create') }}">Crear Producto</a>
+            </li>
+{% if app.user %}
+    <li class="nav-item">
+        <span class="navbar-text">¡Hola, {{ app.user.username }}!</span>
+    </li>
+    <li class="nav-item">
+        <a class="nav-link" href="{{ path('app_logout') }}">Logout</a>
+    </li>
+{% else %}
+    <li class="nav-item">
+        <a class="nav-link" href="{{ path('app_register') }}">
+            <i class="fas fa-user-plus"></i> Registro
+        </a>
+    </li>
+    <li class="nav-item">
+        <a class="nav-link" href="{{ path('app_login') }}">
+            <i class="fas fa-sign-in-alt"></i> Login
+        </a>
+    </li>
+{% endif %}
+
+
+            <!-- Más elementos del menú aquí -->
+        </ul>
+    </div>
+</nav>
 
     <div class="container">
         {% block body %}{% endblock %}
