--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -10,7 +10,7 @@
         {% endif %}
 
         <label for="username">Username:</label>
-        <input type="text" id="username" name="username" value="{{ last_username }}" required autofocus>
+        <input class="mt-3" type="text" id="username" name="username" value="{{ last_username }}" required autofocus>
 
         <label for="password">Password:</label>
         <input type="password" id="password" name="password" required>
