--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -12,20 +12,18 @@
  body {
     background-color: #DDEEFF;
 }
-
-
-    </style>
+ </style>
 </head>
 <body>
 <!-- Navbar de Bootstrap -->
-<!-- Navbar de Bootstrap -->
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="{{ path('welcome') }}">Mi Sitio</a>
+    <a class="navbar-brand" href="{{ path('welcome') }}"><img style="width: 90px; height: 90px;" src="/images/logo.png" alt="Logo de Mi Sitio"></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
+  
             <li class="nav-item">
                 <a class="nav-link" href="{{ path('welcome') }}">Inicio</a>
             </li>
