--- a/templates/product/create.html.twig
+++ b/templates/product/create.html.twig
@@ -45,7 +45,7 @@
 
     <!-- Botón de guardar después de los nuevos campos -->
 
-    <div class="text-center">
+    <div class="text-center mb-3">
         <button type="submit" class="btn btn-primary">Guardar Producto</button>
     </div>
 
