--- a/templates/product/index.html.twig
+++ b/templates/product/index.html.twig
@@ -6,7 +6,7 @@
 
 {% block body %}
 <div class="container mt-4">
-    <h1 class="mb-4">Productos</h1>
+    <h1 class="mb-4 text-center">Productos</h1>
 
      <div class="products row">
         {% for product in products %}
