--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -34,6 +34,55 @@ body {
     background-color: #4a69bd; /* Color de fondo general de la navbar */
 }
 
+.welcome-container {
+    text-align: center;
+}
+
+.animated-title {
+    font-size: 4.5em;
+    color: black;
+    background: linear-gradient(to left, violet, indigo, blue, green, yellow, orange, red);
+    -webkit-background-clip: text;
+    color: transparent;
+    background-size: 200% 100%;
+    animation: moveBg 5s linear infinite;
+    text-shadow: 
+    2px 2px 4px #eb9090, 
+
+}
+
+
+.panther-title {
+    font-size: 1.5em;
+    color:#007bff;
+    text-align: center;
+    margin-top: 20px;
+}
+
+
+@keyframes moveBg {
+    0% { background-position: 0% 50%; }
+    50% { background-position: 100% 50%; }
+    100% { background-position: 0% 50%; }
+}
+
+
+.btn-view-more {
+    margin-top: 20px;
+    padding: 10px 20px;
+    background-color: #007bff;
+    color: white;
+    text-decoration: none;
+    border-radius: 5px;
+    transition: background-color 0.3s ease;
+}
+
+.btn-view-more:hover {
+    background-color: #0056b3;
+}
+
+
+
 .nav-link {
     color: grey !important; /* Color del texto de los enlaces */
     border-radius: 15px; /* Esquinas redondeadas */
