--- a/templates/product/index.html.twig
+++ b/templates/product/index.html.twig
@@ -6,7 +6,7 @@
 
 {% block body %}
 <div class="container mt-4">
-    <h1 class="mb-4 text-center">Productos</h1>
+    <h1 class="mb-4 text-center animated-title">Productos</h1>
 
      <div class="products row">
         {% for product in products %}
@@ -29,5 +29,14 @@
             <p class="text-center">No hay productos disponibles.</p>
         {% endfor %}
     </div>
+     <nav aria-label="Page navigation">
+        <ul class="pagination">
+            {% for i in 1..totalPaginas %}
+                <li class="page-item {{ i == paginaActual ? 'active' : '' }}">
+                    <a class="page-link" href="{{ path('product_index', {'page': i}) }}">{{ i }}</a>
+                </li>
+            {% endfor %}
+        </ul>
+    </nav>
 </div>
 {% endblock %}
