--- a/templates/product/index.html.twig
+++ b/templates/product/index.html.twig
@@ -8,6 +8,8 @@
 <div class="container mt-4">
     <h1 class="mb-4 text-center animated-title">Productos</h1>
 
+     <h2 class="panther-title">Todos nuestro devices disponibles:</h2>
+
      <div class="products row">
         {% for product in products %}
             <div class="product col-md-4 mb-4">
